# FNALNeuGen

./: .travis.yml  CMakeLists.txt  cascade_test.py  run_template.yml  setup.py
include/nuchic/: Cascade.hh  Constants.hh  EffectiveMass.hh  FourVector.hh  Nucleus.hh  ParticleInfo.hh
include/nuchic/FormFactors/: BBBAFormFactor.hh  DipoleFormFactor.hh  FormFactor.hh  KellyFormFactor.hh
include/nuchic/Tensor/: Index.hh  IndexUtil.hh  Meta.hh  Tensor.hh  TensorAddition.hh  TensorDivision.hh  TensorExpression.hh  TensorMultiplication.hh  TensorSubtraction.hh
nuchic/: cascade.py  config.py  constants.py  four_vector.py  inclusive.py  lhe.py  main.py  nucleus.py  three_vector.py  utils.py
nuchic/data/: parse_data.py
nuchic/hadronic_tensor/: __init__.py  currents_opt_v1.f90  form_factor.cc  form_factor.hh  form_factor.i  form_factor.py  form_factor_wrap.cxx  hadronic.f90  hadronic.pyf  mathtool.f90  mc_module_nuChic.f90
src/nuchic/: CMakeLists.txt  Cascade.cc  EffectiveMass.cc  FourVector.cc  Interactions.cc  InteractionsFactory.cc  Nucleus.cc  NucleusModule.cc  ParticleInfoModule.cc  ThreeVector.cc  Utilities.cc  inclusive.py  matrix_elements.py  pdf.py  run_modes.py
src/nuchic/FormFactors/: BBBAFormFactors.cc  FormFactor.cc  KellyFormFactor.cc
test/: CMakeLists.txt  test_tensor.cc
